bat.bool1.posneg.PosNeg.scala.code
def posNeg(a:Int, b:Int, negative:Boolean):Boolean = {
  if (b < 0 && a > 0) || (b > 0 && a <0) 
  {
    if (negative) 
    	return false
    return true
  }
  return false
}